@@ -12,24 +12,11 @@
 		/// </summary>
 		/// 
 		/// <remarks>
-		///	Constructs a new Window of type TopLevel.
-		/// </remarks>
-
-		public Window ()
-		{
-			RawObject = gtk_window_new ((int)WindowType.Toplevel);
-		}
-
-		/// <summary>
-		///	Window Constructor
-		/// </summary>
-		/// 
-		/// <remarks>
 		///	Constructs a new Window of type TopLevel with the 
 		///	specified Title.
 		/// </remarks>
 
-		public Window (String title) : this ()
+		public Window (String title) : this (WindowType.Toplevel)
 		{
 			this.Title = title;
 		}
