@@ -1,5 +1,12 @@
 2002-05-02  Mike Kestner <mkestner@speakeasy.net>
 
+	* generator/ObjectGen.cs : Add support for .custom files.
+	* gtk/Window.custom : clean up build
+	* sample/HelloWorld.cs : Use the customizations.
+	* sample/ButtonApp.cs : Use the customizations.
+
+2002-05-02  Mike Kestner <mkestner@speakeasy.net>
+
 	* README : Describe the new make procedure.
 	* configure.in : Add the new Makefile generation.
 	* makefile : add the glue dir, make linux the default build,
